# devtools-course-practice

modules/pronina-maria-romanconvert/src/: RomanConverter.cxx
modules/pronina-maria-romanconvert/test/: test_romanconverter.cpp
modules/todolist/: CMakeLists.txt  CTestTests.txt
modules/todolist/application/: todolist.cpp
modules/todolist/include/: TODOapp.h  TODOitem.h  TODOlist.h  todo_app.h  todo_item.h  todo_list.h
modules/todolist/src/: TODOapp.cxx  TODOitem.cxx  TODOlist.cxx  todo_app.cxx  todo_item.cxx  todo_list.cxx
modules/todolist/test/: CMakeLists.txt  test_todo_app.cpp  test_todo_item.cpp  test_todo_list.cpp
modules/todolist/test/data/: test.txt
